Completed move to MariaDB; dropped sidebar

--- a/example.env
+++ b/example.env
@@ -1,3 +1,13 @@
 PORT=8080
-APP_TITLE=Go Template
-JWT_SECRET=<JWT secret key>
+APP_TITLE=OSE Tools
+JWT_SECRET=<secret key>
+
+DB_SERVER=<db-url>:3306
+DB_PASSWORD=<password>
+DB_USER=<db user>
+
+# DB name, change for prod or dev
+# for development
+DB_NAME=osetools_dev 
+# for productions
+#DB_NAME=osetools
